--- a/src/components/space/SpaceIcon.scss
+++ b/src/components/space/SpaceIcon.scss
@@ -25,6 +25,11 @@
   // margin-top removed - container uses gap for consistent spacing
 }
 
+.space-icon-compact {
+  width: 44px !important;
+  height: 44px !important;
+}
+
 .space-icon-large {
   width: 114px !important;
   height: 114px !important;
